--- a/src/components/About/Avatar/avatar.scss
+++ b/src/components/About/Avatar/avatar.scss
@@ -1,33 +1,32 @@
-.logo-container {
-    z-index: 0;
-    width: 400px;
-    height: 609px;
-    opacity: 0;
+.logo-rachit {
+  z-index: 1;
+  width: 400px;
+  height: 609px;
+  position: absolute;
+  top: 0;
+  right: 15%;
+  bottom: 0;
+  left: auto;
+  margin: auto;
+
+  .solid-logo {
     position: absolute;
-    top: 0;
-    right: 15%;
-    bottom: 0;
-    left: auto;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: 0;
     margin: auto;
-  
-    .solid-logo {
-      position: absolute;
-      top: auto;
-      right: auto;
-      bottom: auto;
-      left: 0;
-      margin: auto;
-      width: 100%;
-      opacity: 0;
-    //   transform: rotateZ(30deg) !important;
-      z-index: 1;
-    }
-  }
-@media screen and (max-width: 1200px) {
-   .logo-container{
-    position: initial;
     width: 100%;
-    height: 0%;
-    overflow: visible;
-   }
+    display: block;
+  //   transform: rotateZ(30deg) !important;
+    z-index: 1;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .logo-rachit{
+   position: initial;
+   width: 100%;
+   height: 0%;
+   overflow: visible;
+  }
 }
