--- a/src/components/Home/RLogo/RLogo.scss
+++ b/src/components/Home/RLogo/RLogo.scss
@@ -22,3 +22,11 @@
       z-index: 1;
     }
   }
+  @media screen and (max-width: 1200px) {
+    .logo-rachit{
+     position: initial;
+     width: 100%;
+     height: 0%;
+     overflow: visible;
+    }
+ }
