--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -35,7 +35,7 @@
 }
 .about-page,
 .contact-page,
-.skills-page{
+.skills-page,.projects-page{
     .text-zone{
         position: absolute;
         left: 10%;
@@ -98,7 +98,8 @@
 
         &.about-page,
         &.contact-page,
-        &.skills-page{
+        &.skills-page,
+        &.projects-page{
 
             .text-zone{
                 position: initial;
